--- a/src/signin.css
+++ b/src/signin.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
+
 .signin-section {
   background-image: url(./assets/network-889353_1920.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
