--- a/src/responsive.css
+++ b/src/responsive.css
@@ -2036,6 +2036,8 @@
     height: 70vh;
   }
 
+  /**/
+
   .comment-overview-popup-description {
     width: 15.5rem;
     margin: 1rem auto 0 auto;
