--- a/src/responsive.css
+++ b/src/responsive.css
@@ -1495,6 +1495,7 @@
   .post {
     margin: 0;
     padding: 0 3px;
+    z-index: 0;
   }
 
   .post-user-option-div {
@@ -1513,6 +1514,7 @@
   .post-option-div {
     position: absolute;
     margin: 5rem 10rem 0 0;
+    z-index: 1;
   }
 
   .post-kebab-menu-button {
