--- a/src/responsive.css
+++ b/src/responsive.css
@@ -346,6 +346,8 @@
     padding-top: 70rem;
   }
 
+  /**/
+
   .consent-popup-agb-div,
   .consent-popup-data-protection-div,
   .consent-popup-user-consent-div {
