--- a/src/responsive.css
+++ b/src/responsive.css
@@ -32,6 +32,10 @@
 
   /*Overview*/
 
+  .consent-popup-agb-div {
+    padding-top: 75rem;
+  }
+
   .consent-popup-agb-div,
   .consent-popup-data-protection-div,
   .consent-popup-user-consent-div {
@@ -42,6 +46,11 @@
   .consent-popup-data-protection {
     width: 100%;
     margin: 0 auto;
+  }
+
+  .consent-popup-agb,
+  .consent-popup-data-protection {
+    height: 40rem;
   }
 
   .consent-popup-button-div {
@@ -343,7 +352,7 @@
   /*Overview*/
 
   .consent-popup-agb-div {
-    padding-top: 55rem;
+    padding-top: 7dvb;
   }
 
   .consent-popup-agb-div,
@@ -356,6 +365,11 @@
   .consent-popup-data-protection {
     width: 100%;
     margin: 0 auto;
+  }
+
+  .consent-popup-agb,
+  .consent-popup-data-protection {
+    height: 35rem;
   }
 
   .consent-popup-button-div {
