--- a/src/responsive.css
+++ b/src/responsive.css
@@ -424,7 +424,7 @@
   }
 
   .nav-content-div {
-    margin-top: 2.7rem;
+    margin-top: 2.5rem;
     flex-direction: column;
   }
 
@@ -480,8 +480,9 @@
   }
 
   .post-overview {
-    height: 37rem;
+    height: 35rem;
     padding-top: 0;
+    padding-bottom: 1rem;
     border-left-width: 1px;
     border-right-width: 1px;
     border-left-color: #bdbdbd;
@@ -626,10 +627,15 @@
     height: 2.3rem;
   }
 
+  .user-section {
+    padding-bottom: 5rem;
+  }
+
   .user-post-overview {
     width: 75%;
     height: 30rem;
     margin: 1rem auto 0 auto;
+    padding-bottom: 1rem;
   }
 
   /*Settings*/
@@ -651,10 +657,6 @@
   .delete-account-popup-delete-button {
     width: 13rem;
     font-size: 17px;
-  }
-
-  .settings-delete-user-account {
-    margin-bottom: 20rem;
   }
 
   /*AGB*/
@@ -737,7 +739,7 @@
   }
 
   .nav-content-div {
-    margin-top: 4.5rem;
+    margin-top: 3rem;
     flex-direction: column;
   }
 
@@ -787,7 +789,7 @@
 
   .post-overview {
     width: 50%;
-    height: 37rem;
+    height: 35rem;
     margin: 0 auto;
     padding: 1rem 0;
   }
@@ -851,7 +853,8 @@
 
   .user-post-overview {
     width: 85%;
-    height: 20rem;
+    height: 50rem;
+    padding-bottom: 1rem;
   }
 
   /*Settings*/
