--- a/src/responsive.css
+++ b/src/responsive.css
@@ -1593,7 +1593,8 @@
   .post-overview {
     width: 100%;
     height: 40.7rem;
-    padding: 1rem 0;
+
+    padding: 1.5rem 0 1rem 0;
     border: none;
   }
 
@@ -1697,10 +1698,6 @@
 
   .comment-overview-popup {
     height: 30rem;
-  }
-
-  .comment-overview-popup-header {
-    height: 675px;
   }
 
   .create-comment-popup,
