--- a/src/responsive.css
+++ b/src/responsive.css
@@ -2235,7 +2235,7 @@
   /*Chat*/
 
   .comment-overview-popup-header {
-    height: 70vh;
+    height: 25rem;
   }
 
   .comment-overview-popup-description {
