--- a/src/responsive.css
+++ b/src/responsive.css
@@ -2226,6 +2226,10 @@
 
   /*Chat*/
 
+  .comment-overview-popup {
+    height: 25rem;
+  }
+
   .comment-overview-popup-description {
     width: 15.5rem;
     margin: 1rem auto 0 auto;
