--- a/src/responsive.css
+++ b/src/responsive.css
@@ -159,7 +159,7 @@
 
   .post-overview {
     padding: 1rem;
-    height: 48.7rem;
+    height: 48.3rem;
     border-left-width: 1px;
     border-right-width: 1px;
     border-left-color: #bdbdbd;
@@ -291,6 +291,7 @@
     width: 75%;
     height: 38rem;
     margin: 1rem auto 0 auto;
+    padding-bottom: 1rem;
   }
 
   /*Settings*/
@@ -308,6 +309,9 @@
   .delete-account-popup-delete-button {
     width: 13rem;
     font-size: 17px;
+  }
+
+  .settings-delete-user-account {
   }
 
   /*Impressum*/
@@ -1593,7 +1597,6 @@
   .post-overview {
     width: 100%;
     height: 40.7rem;
-
     padding: 1.5rem 0 1rem 0;
     border: none;
   }
@@ -1823,6 +1826,7 @@
 
   .user-post-overview {
     height: 36.3rem;
+    margin: 0 auto;
     padding: 1rem auto;
   }
 
@@ -2182,8 +2186,8 @@
   }
 
   .post-overview {
-    height: 23.5rem;
-    margin-top: -4rem;
+    height: 21rem;
+    margin-top: -1.5rem;
     padding: 1rem 0;
   }
 
