--- a/src/responsive.css
+++ b/src/responsive.css
@@ -32,6 +32,10 @@
 
   /*Overview*/
 
+  .consent-popup-agb-div {
+    padding-top: 75rem;
+  }
+
   .consent-popup-agb-div,
   .consent-popup-data-protection-div,
   .consent-popup-user-consent-div {
@@ -346,6 +350,10 @@
   }
 
   /*Overview*/
+
+  .consent-popup-agb-div {
+    padding-top: 75rem;
+  }
 
   .consent-popup-agb-div,
   .consent-popup-data-protection-div,
@@ -686,6 +694,10 @@
 
   /*Overview*/
 
+  .consent-popup-agb-div {
+    padding-top: 83rem;
+  }
+
   .consent-popup-button-div {
     padding-right: 13%;
   }
@@ -892,6 +904,10 @@
 
   .consent-popup {
     padding: 1.5rem 0.5rem;
+  }
+
+  .consent-popup-agb-div {
+    padding-top: 77rem;
   }
 
   .consent-popup-input-checkbox {
@@ -1410,6 +1426,10 @@
   .consent-popup-description {
     margin: 0;
     padding: 0;
+  }
+
+  .consent-popup-agb-div {
+    padding-top: 70rem;
   }
 
   .consent-popup-agb-div,
@@ -2020,6 +2040,10 @@
 
   /*Overview*/
 
+  .consent-popup-agb-div {
+    padding-top: 80rem;
+  }
+
   .search-user-popup-input-button-div {
     width: 16rem;
     margin: 0 auto;
@@ -2093,6 +2117,7 @@
   }
 
   .overview-nav-bar {
+    margin-top: 39rem;
     position: fixed;
   }
 
