--- a/src/responsive.css
+++ b/src/responsive.css
@@ -779,8 +779,8 @@
 
   .post-overview {
     width: 50%;
-    height: 27rem;
-    margin: 1rem auto 0 auto;
+    height: 29rem;
+    margin: 0 auto;
     padding: 1rem 0;
   }
 
@@ -847,8 +847,8 @@
 
   .user-post-overview {
     width: 85%;
-    height: 50rem;
-    margin: 1rem 0;
+    height: 30rem;
+    margin: 1rem auto;
     padding-bottom: 1rem;
   }
 
@@ -2116,7 +2116,7 @@
   }
 
   .overview-nav-bar {
-    margin-top: 39rem;
+    margin-top: 41rem;
     position: fixed;
   }
 
@@ -2165,8 +2165,7 @@
   }
 
   .post-overview {
-    height: 30rem;
-    margin-top: 0.5rem;
+    height: 25rem;
     padding: 1rem 0;
   }
 
@@ -2354,7 +2353,7 @@
 
   .user-post-overview {
     width: 95%;
-    height: 18rem;
+    height: 20rem;
     margin-top: 1rem;
     padding: 0.5rem auto;
   }
