--- a/src/responsive.css
+++ b/src/responsive.css
@@ -779,7 +779,7 @@
 
   .post-overview {
     width: 50%;
-    height: 29rem;
+    height: 28.5rem;
     margin: 0 auto;
     padding: 1rem 0;
   }
@@ -845,6 +845,9 @@
 
   /*User*/
 
+  .user-section {
+    padding-bottom: 3rem;
+  }
   .user-post-overview {
     width: 85%;
     height: 30rem;
@@ -2116,7 +2119,7 @@
   }
 
   .overview-nav-bar {
-    margin-top: 41rem;
+    margin-top: 43rem;
     position: fixed;
   }
 
@@ -2165,7 +2168,7 @@
   }
 
   .post-overview {
-    height: 25rem;
+    height: 23rem;
     padding: 1rem 0;
   }
 
@@ -2353,7 +2356,7 @@
 
   .user-post-overview {
     width: 95%;
-    height: 20rem;
+    height: 23rem;
     margin-top: 1rem;
     padding: 0.5rem auto;
   }
