Update UX, SupaBase Datenbanktabellen, Frontend-Code

--- a/src/overview.css
+++ b/src/overview.css
@@ -1,10 +1,14 @@
 @import "tailwindcss";
 
-.post-overview {
+.post-overview,
+.consent-popup-agb,
+.consent-popup-data-protection {
   position: relative;
 }
 
-.post-overview::after {
+.post-overview::after,
+.consent-popup-agb:after,
+.consent-popup-data-protection:after {
   content: "";
   position: absolute;
   bottom: 0;
