Update Responsive-Design Message

--- a/src/responsive.css
+++ b/src/responsive.css
@@ -1042,6 +1042,7 @@
 
   .to-overview-icon {
     width: 2.5rem;
+    margin-left: -1rem;
   }
 
   .message-headline {
@@ -1599,6 +1600,7 @@
 
   .to-overview-icon {
     width: 2rem;
+    margin-left: -3rem;
   }
 
   .message-headline {
@@ -2120,7 +2122,7 @@
   }
 
   .overview-nav-bar {
-    margin-top: 41.5rem;
+    margin-top: 42.5rem;
     position: fixed;
   }
 
@@ -2169,7 +2171,7 @@
   }
 
   .post-overview {
-    height: 22rem;
+    height: 23rem;
     padding: 0.5rem 0 1rem 0;
   }
 
@@ -2181,6 +2183,12 @@
     align-items: center;
     justify-content: center;
     row-gap: 0.3rem;
+  }
+
+  /*Message*/
+
+  .to-overview-icon {
+    margin-left: -5rem;
   }
 
   /*Post*/
