--- a/src/overview.css
+++ b/src/overview.css
@@ -6,6 +6,18 @@
   position: relative;
 }
 
+.overview-nav-bar {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+.show-content {
+  background-color: #f0f2f5;
+}
+
+/*.post-overview {
+  background-color: #f3f5f6;
+}*/
+
 .post-overview::after,
 .consent-popup-agb:after,
 .consent-popup-data-protection:after {
@@ -14,7 +26,9 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 20px;
+  height: 10px;
   pointer-events: none;
-  box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.7) inset;
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.7) inset;
+  box-shadow: 0 -6px 8px rgba(0, 0, 0, 0.5) inset;
+  box-shadow: 0 -10px 12px rgba(0, 0, 0, 0.3) inset;
 }
