--- a/src/settings.css
+++ b/src/settings.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+.settings-section {
+  background-color: #f0f2f5;
+}
+
 .settings-agb-overview,
 .settings-data-protection-overview {
   position: relative;
@@ -14,5 +18,7 @@
   right: 0;
   height: 20px;
   pointer-events: none;
-  box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.7) inset;
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.7) inset;
+  box-shadow: 0 -6px 8px rgba(0, 0, 0, 0.5) inset;
+  box-shadow: 0 -10px 12px rgba(0, 0, 0, 0.3) inset;
 }
