Update responsive design

--- a/src/nav.css
+++ b/src/nav.css
@@ -1,4 +1,4 @@
-.user-options-icon-div,
-.user-options-div {
+.nav-section-user-options-icon-div,
+.nav-section-user-options-div {
   background-color: #f0f2f5;
 }
