--- a/src/overview.css
+++ b/src/overview.css
@@ -1,16 +1,12 @@
 @import "tailwindcss";
 
-.post-overview,
-.consent-popup-agb,
-.consent-popup-data-protection {
+.overview-section-post-overview,
+.overview-section-consent-popup-agb,
+.overview-section-consent-popup-data-protection {
   position: relative;
 }
 
-.overview-nav-bar {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-}
-
-.show-content {
+.overview-section-show-content {
   background-color: #f0f2f5;
 }
 
@@ -18,9 +14,9 @@
   background-color: #f3f5f6;
 }*/
 
-.post-overview::after,
-.consent-popup-agb:after,
-.consent-popup-data-protection:after {
+.overview-section-post-overview::after,
+.overview-section-consent-popup-agb::after,
+.overview-section-consent-popup-data-protection::after {
   content: "";
   position: absolute;
   bottom: 0;
