--- a/src/user.css
+++ b/src/user.css
@@ -4,17 +4,17 @@
   background-color: #f0f2f5;
 }
 
-.user-post-overview {
+.user-section-post-shadow-div {
   position: relative;
 }
 
-.user-post-overview::after {
+.user-section-post-shadow-div::after {
   content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 20px;
+  height: 10px;
   pointer-events: none;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.7) inset;
   box-shadow: 0 -6px 8px rgba(0, 0, 0, 0.5) inset;
